<resources>
    <string name="app_name">My Application</string>
    <string name="texto_macarraocarbonara">Macarrão Carbonara</string>
    <string name="texto_rondelli">Rondelli</string>
    <string name="texto_risoto">Risotto.</string>
    <string name="texto_pinga">Pinga.</string>
    <string name="texto_coca">Coca-Cola.</string>
    <string name="texto_suco">Suco de Maracuja.</string>



</resources>