<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaBebidasBackEnd">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/texto_pinga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_pinga" />

            <ImageView
                android:id="@+id/img_pinga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pinga" />

            <TextView
                android:id="@+id/texto_coca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_coca" />

            <ImageView
                android:id="@+id/img_coca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/coca" />

            <TextView
                android:id="@+id/texto_suco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_suco" />

            <ImageView
                android:id="@+id/img_suco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/suco" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>